deploy: 04c7a11f6ee736d240198a4aa77c4f70f1c3327b

--- a/tutorials/f_cutting/index.html
+++ b/tutorials/f_cutting/index.html
@@ -169,7 +169,7 @@ cut_flake_1d(material, unit_cells, plot=False)
 <p>We need to specify the number of unit cells. </p>
 <div class="language-python highlight"><pre><span></span><code><span id="__span-2-1"><a id="__codelineno-2-1" name="__codelineno-2-1" href="#__codelineno-2-1"></a><span class="n">flake</span> <span class="o">=</span> <span class="n">ssh</span><span class="o">.</span><span class="n">cut_flake</span><span class="p">(</span> <span class="n">unit_cells</span> <span class="o">=</span> <span class="mi">40</span><span class="p">,</span> <span class="n">plot</span> <span class="o">=</span> <span class="kc">False</span><span class="p">)</span>
 </span></code></pre></div>
-<p>You may notice this is the configuration with edge states in the band gap</p>
+<p>You may notice this is the configuration without edge states in the band gap</p>
 <div class="language-python highlight"><pre><span></span><code><span id="__span-3-1"><a id="__codelineno-3-1" name="__codelineno-3-1" href="#__codelineno-3-1"></a><span class="n">flake</span><span class="o">.</span><span class="n">show_energies</span><span class="p">()</span>
 </span></code></pre></div>
 <p><img alt="png" src="../f_cutting_files/f_cutting_8_0.png" /></p>
