deploy: e5d4aa603e6aa1cc0aaabee179baf724f99253aa

--- a/tutorials/g_td_sim/index.html
+++ b/tutorials/g_td_sim/index.html
@@ -135,8 +135,8 @@
 <p>where </p>
 <ol>
 <li><span class="arithmatex">\(h^{0}\)</span> is the unperturbed or bare Hamiltonian constructed from localized orbitals.</li>
-<li><span class="arithmatex">\(\vec{P}\)</span> is the dipole moment operator depending on space <span class="arithmatex">\(\vec{r}\)</span> and transition dipole moments <span class="arithmatex">\(\vec{d}\)</span>, leading to an interatomic potential with unit charge <span class="arithmatex">\(e\)</span>, given by <span class="arithmatex">\(e \vec{E} \vec{r}\)</span>, and an intra-atomic potential <span class="arithmatex">\(\vec{E} \vec{d}\)</span>.</li>
-<li><span class="arithmatex">\(\rho^{0}\)</span> is the stationary density matrix of the system's ground state, and <span class="arithmatex">\(C\)</span> is the Coulomb matrix (a subset of two-body matrix elements).</li>
+<li><span class="arithmatex">\(\vec{P}\)</span> is the polarization operator depending on lattice site positions <span class="arithmatex">\(\vec{r}\)</span>. Additonal dipole moment elements <span class="arithmatex">\(\vec{d}_{ij}\)</span> between orbitals <span class="arithmatex">\(i\)</span>, <span class="arithmatex">\(j\)</span> of the same site can additionally be taken into account. This leads to an interatomic potential with unit charge <span class="arithmatex">\(e\)</span>, given by <span class="arithmatex">\(e \vec{E} \vec{r}\)</span>, and an intra-atomic potential <span class="arithmatex">\(\vec{E} \vec{d}\)</span>.</li>
+<li><span class="arithmatex">\(\rho^{0}\)</span> is the stationary density matrix of the system's ground state, and <span class="arithmatex">\(C\)</span> is the Coulomb matrix.</li>
 </ol>
 <p>This expression is the dipole-gauge expression for the Hamiltonian including an external electric field <span class="arithmatex">\(\vec{E}\)</span>.</p>
 <h2 id="observables">Observables</h2>
