deploy: 746c9a429d007944bc53894cfc21c74110eaf448

--- a/tutorials/a_getting_started/index.html
+++ b/tutorials/a_getting_started/index.html
@@ -267,8 +267,7 @@ Included tags with number of orbitals: {&#39;sublattice_1&#39;: 28, &#39;sublatt
 </span><span id="__span-11-5"><a id="__codelineno-11-5" name="__codelineno-11-5" href="#__codelineno-11-5"></a><span class="p">)</span>
 </span><span id="__span-11-6"><a id="__codelineno-11-6" name="__codelineno-11-6" href="#__codelineno-11-6"></a><span class="nb">print</span><span class="p">(</span> <span class="n">my_first_illumination</span><span class="p">(</span> <span class="mf">0.0</span><span class="p">)</span> <span class="p">)</span> <span class="c1"># initial value of the field</span>
 </span></code></pre></div>
-<div class="language-text highlight"><pre><span></span><code>[2.60905079e-13-1.44036042e-13j 0.00000000e+00+0.00000000e+00j
- 0.00000000e+00+0.00000000e+00j]
+<div class="language-text highlight"><pre><span></span><code>[2.60905079e-13 0.00000000e+00 0.00000000e+00]
 </code></pre></div>
 <p>The pulse corresponds to a plane wave with a Gaussian temporal profile. To visualize it, please consult the electric fields tutorial.</p>
 <p>Now we come to the actual simulation. For any time-domain simulation, we have to decide on a few additional parameters:</p>
