deploy: 5ebc704841a31de9b21999c324d26965588c34b4

--- a/units/index.html
+++ b/units/index.html
@@ -134,11 +134,11 @@
 </tr>
 <tr>
 <td>Time</td>
-<td><span class="arithmatex">\(0.659 \cdot 10^{-15}\)</span> s</td>
+<td><span class="arithmatex">\(0.659 \cdot 10^{-15}\)</span> s (= <span class="arithmatex">\(\hbar^{-1}\)</span>)</td>
 </tr>
 <tr>
 <td>Charge</td>
-<td><span class="arithmatex">\(1.6 \cdot 10^{-19}\)</span> C</td>
+<td><span class="arithmatex">\(1.6 \cdot 10^{-19}\)</span> C  (= elementary charge e)</td>
 </tr>
 <tr>
 <td>Electric field strength</td>
