--- a/tutorials/d_basis_handling/index.html
+++ b/tutorials/d_basis_handling/index.html
@@ -118,7 +118,7 @@
             <div class="section" itemprop="articleBody">
               
                 <h1 id="basis-handling">Basis Handling</h1>
-<p>We introduce the site and energy basis. </p>
+<p>We introduce the site and energy bases.</p>
 <h2 id="default-basis">Default basis</h2>
 <p>By default, GRANAD uses the site basis. You can explicitly force a quantity to be given in energy basis by appending "_e" to it.</p>
 <div class="language-python highlight"><pre><span></span><code><span id="__span-0-1"><a id="__codelineno-0-1" name="__codelineno-0-1" href="#__codelineno-0-1"></a><span class="kn">import</span><span class="w"> </span><span class="nn">jax.numpy</span><span class="w"> </span><span class="k">as</span><span class="w"> </span><span class="nn">jnp</span>
@@ -140,7 +140,7 @@
 <div class="language-text highlight"><pre><span></span><code>True
 </code></pre></div>
 <p>This is useful when transforming arrays of density matrices, because appending _e only works on attributes of the orbital list. Density matrices are a simulation output and as such not an attribute of the orbital list. Appending _e to the variable name will thus not work and a separate method is needed.</p>
-<p>Transition dipole moments can be displayed in energy basis</p>
+<p>Dipole moment elements can be displayed in energy basis</p>
 <div class="language-python highlight"><pre><span></span><code><span id="__span-3-1"><a id="__codelineno-3-1" name="__codelineno-3-1" href="#__codelineno-3-1"></a><span class="kn">import</span><span class="w"> </span><span class="nn">matplotlib.pyplot</span><span class="w"> </span><span class="k">as</span><span class="w"> </span><span class="nn">plt</span>
 </span><span id="__span-3-2"><a id="__codelineno-3-2" name="__codelineno-3-2" href="#__codelineno-3-2"></a><span class="n">plt</span><span class="o">.</span><span class="n">matshow</span><span class="p">(</span><span class="n">flake</span><span class="o">.</span><span class="n">dipole_operator_e</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span><span class="o">.</span><span class="n">real</span><span class="p">)</span>
 </span><span id="__span-3-3"><a id="__codelineno-3-3" name="__codelineno-3-3" href="#__codelineno-3-3"></a><span class="n">plt</span><span class="o">.</span><span class="n">colorbar</span><span class="p">()</span>
