--- a/tutorials/j_defining_materials/index.html
+++ b/tutorials/j_defining_materials/index.html
@@ -342,7 +342,7 @@ The example below illustrates this for a preliminary, work-in-progress version o
 </span></code></pre></div>
 <p><img alt="png" src="../j_defining_materials_files/j_defining_materials_15_0.png" /></p>
 <h2 id="modifying-existing-materials">Modifying existing materials</h2>
-<p>You can copy the material you want to modify and change/override its attributes.
+<p>You can copy the material you want to modify and change/overwrite its attributes.
 As an example, we will turn our ordinary graphene model into a direction-independent variant of the Haldane model by introducing complex nnn hoppings and without the staggered onsite potential</p>
 <div class="language-python highlight"><pre><span></span><code><span id="__span-8-1"><a id="__codelineno-8-1" name="__codelineno-8-1" href="#__codelineno-8-1"></a><span class="kn">from</span><span class="w"> </span><span class="nn">copy</span><span class="w"> </span><span class="kn">import</span> <span class="n">deepcopy</span>
 </span><span id="__span-8-2"><a id="__codelineno-8-2" name="__codelineno-8-2" href="#__codelineno-8-2"></a><span class="n">graphene</span>  <span class="o">=</span> <span class="n">MaterialCatalog</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s2">&quot;graphene&quot;</span><span class="p">)</span>
