--- a/tutorials/c_plotting/index.html
+++ b/tutorials/c_plotting/index.html
@@ -126,7 +126,7 @@
 <p>A typical simulation requires visualizing:</p>
 <ol>
 <li>geometry</li>
-<li>simulation results</li>
+<li>simulation results in time or frequency domain</li>
 <li>space-dependent arrays (such as eigenstates, charges, ...)</li>
 </ol>
 <p>All public plotting functions are associated with a list of orbitals.</p>
@@ -146,9 +146,9 @@
 </span></code></pre></div>
 <p><img alt="png" src="../c_plotting_files/c_plotting_6_0.png" /></p>
 <h2 id="simulation-output">Simulation output</h2>
-<p>There is a dedicated function for showing time-domain simulation results. Let's illustrate this by tracking the current considering the previously defined flake under x-polarized Gaussian pulsed illumination, which in GRANAD's units is equivalent to the velocity operator given by the commutator of the system hamiltonian <span class="arithmatex">\(H\)</span> and the polarization operator <span class="arithmatex">\(\bf{P}\)</span></p>
+<p>There is a dedicated function for showing time-domain simulation results. Let's illustrate this by tracking the current density considering the previously defined flake under x-polarized Gaussian pulsed illumination. The current density is related to the velocity operator given by the commutator of the system hamiltonian <span class="arithmatex">\(H\)</span> and the polarization operator <span class="arithmatex">\(\bf{P}\)</span></p>
 <div class="arithmatex">\[\bf{v} = \frac{-i}{\hbar} [H, \bf{P}]\]</div>
-<p>The time-dependent induced current (density) is given by the expectation value of the current density operator <span class="arithmatex">\(\bf{j}\)</span>, which is related to the velocity operator as <span class="arithmatex">\(\bf{j} = e\bf{v}\)</span>. In GRANAD's units, setting the elementary charge <span class="arithmatex">\(e = 1\)</span>, the velocity operator is thus identical to the current density operator, with which we can immediately evalute the induced currents due to the external field.</p>
+<p>The time-dependent induced current density is given by the expectation value of the operator <span class="arithmatex">\(\bf{j} = e\bf{v}\)</span>. In GRANAD's units, setting the elementary charge <span class="arithmatex">\(e = 1\)</span>, the velocity operator is thus identical to the current density operator, with which we can immediately evalute the induced currents due to the external field.</p>
 <div class="language-python highlight"><pre><span></span><code><span id="__span-2-1"><a id="__codelineno-2-1" name="__codelineno-2-1" href="#__codelineno-2-1"></a><span class="kn">from</span><span class="w"> </span><span class="nn">granad</span><span class="w"> </span><span class="kn">import</span> <span class="n">Pulse</span>
 </span><span id="__span-2-2"><a id="__codelineno-2-2" name="__codelineno-2-2" href="#__codelineno-2-2"></a><span class="n">pulse</span> <span class="o">=</span> <span class="n">Pulse</span><span class="p">(</span>
 </span><span id="__span-2-3"><a id="__codelineno-2-3" name="__codelineno-2-3" href="#__codelineno-2-3"></a>    <span class="n">amplitudes</span><span class="o">=</span><span class="p">[</span><span class="mf">1e-5</span><span class="p">,</span> <span class="mi">0</span><span class="p">,</span> <span class="mi">0</span><span class="p">],</span> <span class="n">frequency</span><span class="o">=</span><span class="mf">2.3</span><span class="p">,</span> <span class="n">peak</span><span class="o">=</span><span class="mi">5</span><span class="p">,</span> <span class="n">fwhm</span><span class="o">=</span><span class="mi">2</span>
@@ -170,9 +170,9 @@ RHS compiled
 100.0 %
 </code></pre></div>
 <p><img alt="png" src="../c_plotting_files/c_plotting_11_2.png" /></p>
-<p>A detailed description of parameters to the Gaussian pulse is given in the electric fields tutorial.</p>
+<p>A detailed description of parameters of the Gaussian pulse is given in the electric fields tutorial.</p>
 <p>We can also Fourier transform the result to obtain the frequency domain result by specifying the omega limits. Note that omitting the variables xlabel and ylabel will result in no axis labels.</p>
-<div class="language-python highlight"><pre><span></span><code><span id="__span-3-1"><a id="__codelineno-3-1" name="__codelineno-3-1" href="#__codelineno-3-1"></a><span class="n">flake</span><span class="o">.</span><span class="n">show_res</span><span class="p">(</span> <span class="n">result</span><span class="p">,</span> <span class="n">omega_max</span> <span class="o">=</span> <span class="mi">5</span><span class="p">,</span> <span class="n">omega_min</span> <span class="o">=</span> <span class="mi">0</span><span class="p">,</span> <span class="n">plot_labels</span> <span class="o">=</span> <span class="n">plot_labels</span> <span class="p">)</span>
+<div class="language-python highlight"><pre><span></span><code><span id="__span-3-1"><a id="__codelineno-3-1" name="__codelineno-3-1" href="#__codelineno-3-1"></a><span class="n">flake</span><span class="o">.</span><span class="n">show_res</span><span class="p">(</span> <span class="n">result</span><span class="p">,</span> <span class="n">omega_min</span> <span class="o">=</span> <span class="mi">0</span><span class="p">,</span> <span class="n">omega_max</span> <span class="o">=</span> <span class="mi">5</span><span class="p">,</span> <span class="n">plot_labels</span> <span class="o">=</span> <span class="n">plot_labels</span> <span class="p">)</span>
 </span></code></pre></div>
 <p><img alt="png" src="../c_plotting_files/c_plotting_14_0.png" /></p>
 <p>Note that the sparsity of the spectral grid ows to the sparse sampling in time domain which we have chosen for demonstrational purposes. A real simulation requires more careful refinement of the temporal grid. A finer temporal grid or longer integration time generally results in higher quality spectra.</p>
@@ -204,6 +204,7 @@ RHS compiled
 <p><img alt="png" src="../c_plotting_files/c_plotting_23_0.png" /></p>
 <p><img alt="png" src="../c_plotting_files/c_plotting_23_1.png" /></p>
 <p>Additionally, if you supply the keyword argument name = "MY-PLOT-NAME.pdf" to any plotting function, the plot will not be displayed, but instead saved to disk in the directory you invoked Python.</p>
+<h1 id="induced-field-visualization">Induced field visualization</h1>
 <p>There exists a convenience function to compute and visualize the induced field at an arbitrary time step. 
 To achieve this, we first run a full simulation of the system using the <code>flake.master_equation</code> function
 and extract the density matrix at the last time step.</p>
@@ -249,7 +250,7 @@ and plots the normalized logarithmic magnitude of the induced field.</p>
 </span><span id="__span-9-9"><a id="__codelineno-9-9" name="__codelineno-9-9" href="#__codelineno-9-9"></a>                                         <span class="c1"># ensuring that the field reflects the system&#39;s state at the final time step.</span>
 </span><span id="__span-9-10"><a id="__codelineno-9-10" name="__codelineno-9-10" href="#__codelineno-9-10"></a><span class="p">)</span>
 </span></code></pre></div>
-<p><img alt="png" src="../c_plotting_files/c_plotting_30_0.png" /></p>
+<p><img alt="png" src="../c_plotting_files/c_plotting_31_0.png" /></p>
               
             </div>
           </div><footer>
